re PR c++/43382 ([C++0x] ICE with auto return type and variadic templates)

PR c++/43382
	* pt.c (fn_type_unification): Don't get confused by recursive
	unification.

From-SVN: r159875